--- a/decisions.yaml
+++ b/decisions.yaml
@@ -40,7 +40,7 @@ decisions:
       text: "Report the bully to the school authorities"
       outcome: "The school takes action, and the bullying stops. Why wouldn't you do this?"
       values:
-        truth: +1
+        truth: +2
         justice: -2
         morality: +2
   - summary: "You [b]see[/b] someone [color=red]tying people to a train track[/color], and a train is coming"
@@ -91,7 +91,7 @@ decisions:
       text: "You [b]report[/b] [color=red]the co-worker[/color] to your boss"
       outcome: "The co-worker is fired, and everyone knows it was your fault."
       values:
-        truth: +2
+        truth: +3
         harmony: -3
         law: +1
     option_b:
@@ -114,7 +114,7 @@ decisions:
       outcome: "Your fiance continues to cheat, but it's too late to do anything about it."
       values:
         balance: -2
-        order: +3
+        order: +
         justice: -2
   - summary: "You see a [color=red]child[/color] being [b]hit on the back[/b] by their parent"
     option_a:
@@ -128,30 +128,30 @@ decisions:
       text: "You [b]report[/b] [color=red]the abuse[/color] to the authorities"
       outcome: "The child was choking on a piece of food, but was taken away from their parents anyway."
       values:
-        truth: -1
-        law: +3
+        truth: -3
+        law: +1
         morality: -2
   - summary: "Your [color=red]best friend[/color] is [b]stealing[/b] from a store you are in together"
     option_a:
       text: "You [b]confront[/b] [color=red]your best friend[/color], and tell them to stop"
       outcome: "Your conversation is overheard, and they are arrested."
       values:
-        law: +3
+        law: +2
         morality: -1
         justice: +2
     option_b:
       text: "You [b]help[/b] [color=red]your best friend[/color] steal, and try to get away with it"
       outcome: "They get away with it, but you were caught, butterfingers."
       values:
-        truth: -3
-        law: -2
+        truth: -2
+        law: -3
         morality: -3
   - summary: "While on holiday, you [b]overhear[/b] a group of people discussing a [color=red]potential crime[/color]"
     option_a:
       text: "You [b]ignore[/b] [color=red]the conversation[/color]"
       outcome: "That was none of your business, right?"
       values:
-        truth: -2
+        truth: -1
         harmony: +3
         justice: -1
     option_b:
@@ -167,21 +167,21 @@ decisions:
       outcome: "Not even a thank you."
       values:
         harmony: +1
-        morality: +2
+        morality: +3
         justice: -3
     option_b:
       text: "You [b]refuse[/b] to donate your kidney to [color=red]your father[/color]"
       outcome: "He dies, but you don't have to deal with him anymore."
       values:
         balance: +1
-        order: -3
-        justice: +3
+        order: +1
+        justice: -1
   - summary: "You [b]find[/b] a [color=red]severely injured fox[/color] on the street, barely alive"
     option_a:
       text: "You [b]help[/b] the fox, and take it to a vet"
       outcome: "The fox is saved, but you are stuck with the bill."
       values:
-        truth: +2
+        truth: +3
         balance: +1
         morality: -1
     option_b: 
@@ -189,14 +189,14 @@ decisions:
       outcome: "It was barely alive, so it was probably the right thing to do."
       values:
         balance: -1
-        order: +2
+        order: +1
         morality: -1
   - summary: "You're late for work while driving, and are [b]approaching[/b] a [color=red]chicken[/color] in the road"
     option_a: 
       text: "You [b]swerve[/b] to avoid hitting the [color=red]chicken[/color]"
       outcome: "Somehow, no one saw that move, and you get to work on time."
       values:
-        order: +1
+        order: +2
         law: -1
         morality: +2
     option_b:
@@ -205,7 +205,6 @@ decisions:
       values:
         balance: -2
         morality: -1
-        justice: +3
   - summary: "Money is [b]embezzled[/b] from your company, and [color=red]you[/color] are the prime suspect"
     option_a:
       text: "You [b]report[/b] the real culprit, your [color=red]son[/color]"
@@ -213,7 +212,7 @@ decisions:
       values:
         justice: -2
         harmony: -2
-        morality: +1
+        morality: +2
     option_b:
       text: "You [b]take the blame[/b] for the embezzlement, and let [color=red]your son[/color] get away with it"
       outcome: "Your reputation wasn't worth that much, I guess."
@@ -241,9 +240,9 @@ decisions:
       text: "Explain this to your children, and [b]get the goldfish put down[/b]"
       outcome: "It doesn't feel like it now, but I'm sure they'll forgive you eventually."
       values:
-        truth: +2
-        order: -2
-        balance: +1
+        truth: +3
+        order: -3
+        harmony: +1
     option_b:
       text: "Leave the [color=yellow]goldfish[/color] untreated, and hope it gets better"
       outcome: "It lasted a few more weeks, but it was a slow and painful death."
@@ -256,16 +255,16 @@ decisions:
       text: "[b]Let her[/b] think [color=red]she[/color] did it"
       outcome: "You saw her in the obituaries a few days later, that's sad."
       values:
-        truth: -3
+        truth: -2
         order: -3
-        law: +3
+        law: +2
     option_b:
       text: "[b]Confess[/b] to [color=red]the crime[/color]"
       outcome: "You are arrested and sentenced to 10 years in prison."
       values:
         balance: -2
         morality: +3
-        justice: +1
+        justice: +2
   - summary: "You suspect that your [color=red]friend[/color] is [b]cheating[/b] on their partner, but you have no proof"
     option_a:
       text: "You [b]confront[/b] your [color=red]friend[/color] about it"
@@ -273,12 +272,12 @@ decisions:
       values:
         order: -2
         morality: +1
-        justice: +2
+        justice: -3
     option_b:
       text: "Leave [color=red]your friend[/color] alone, this is not your problem"
       outcome: "They remain together, but you can see behind his smile. Still, at least you didn't do anything."
       values:
-        truth: -2
+        truth: -1
         harmony: -2
         balance: +2
   - summary: "You are on a [color=red]jury[/color], and [color=red]the defendant[/color] is [b]clearly guilty[/b], but you have a personal connection to them"
@@ -286,9 +285,9 @@ decisions:
       text: "You must [b]vote guilty[/b], and do your duty as a [color=red]juror[/color]"
       outcome: "He'll face the death penalty for this, you know?"
       values:
-        order: +2
+        order: +3
         law: +3
-        justice: +1
+        justice: -2
     option_b:
       text: "You [b]vote not guilty[/b], and let your personal feelings get in the way of justice"
       outcome: "Don't worry, manslaughter while drunk driving is hardly a crime, right?"
@@ -303,13 +302,13 @@ decisions:
       values:
         truth: +2
         harmony: +1
-        justice: -1
+        justice: -2
     option_b:
       text: "[b]Gaslight[/b] [color=red]your roommate[/color], wasn't it their turn?"
       outcome: "You won the argument, but may need to find a new roommate soon."
       values:
         truth: -2
-        order: +2
+        order: +1
         harmony: -1
   - summary: "Your sibling is [color=red]dying[/color], and their last wish is for you to [b]kill them[/b] on their own terms."
     option_a:
@@ -318,29 +317,29 @@ decisions:
       values: 
         truth:  -2
         law: -3
-        justice: +2
+        harmony: -1
     option_b:
       text: "[color=red]You[/color] would never do [b]that[/b]"
       outcome: "Their death was long and painful, but at least you can sleep at night."
       values:
         harmony: -2
-        law: 2
+        law: 1
         morality: -3
   - summary: "[color=red]Reddit[/color] has [b]decided[/b] you're the asshole. How do you respond?"
     option_a:
       text: "Ignore it, Redditors have no power over you"
       outcome: "Correct."
       values:
-        truth: -1
+        truth: +2
         harmony: +3
-        justice: -2
+        justice: +2
     option_b:
       text: "Fight back, there's two sides to every story"
       outcome: "Wrong + You're an abuser. L"
       values:
         truth: -3
         morality: -1
-        justice: -1
+        justice: -3
 #  - summary:
 #    option_a:
 #      text:
